Size fix part 8/???
Checkbox too big

--- a/Styles.css
+++ b/Styles.css
@@ -12,8 +12,8 @@ p {
 font-size: 1em;
 }
 input.move {
-width: 4.5em;
-height: 4.5em;
+width: 1em;
+height: 1em;
 }
 textarea {
 width: 96%;
